[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src/"] }

[tool.setuptools.dynamic]
version = { attr = "gwkokab.version.__version__" }

[project]
authors = [
    { name = "Meesum Qazalbash", email = "meesumqazalbash@gmail.com" },
    { name = "Muhammad Zeeshan", email = "m.zeeshan5885@gmail.com" },
    { name = "Richard O'Shaughnessy", email = "richardoshaughnessyrossma@gmail.com" },
]
name = "gwkokab"
dynamic = ["version"]
maintainers = [
    { name = "Meesum Qazalbash", email = "meesumqazalbash@gmail.com" },
]
description = "A JAX-based gravitational-wave population inference toolkit for parametric models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "arviz>=0.20.0",
    "chex>=0.1.87",
    "equinox>=0.11.3",
    "flowMC==0.4.5",
    "glasbey>=0.3.0",
    "h5py>=3.12.1",
    "jaxtyping>=0.2.36",
    "jenkspy==0.4.1",
    "loguru>=0.7.0",
    "matplotlib>=3.9.0",
    "mplcursors>=0.6",
    "numpy<3",
    "numpyro>=0.19.0",
    "optax<0.2.7",
    "pandas>=2.2.0",
    "pydantic>=2.12.0",
    "quadax>=0.2.5",
    "rich>=14.0.0",
    "RIFT>=0.0.15.11",
    "scipy>=1.12",
    "seaborn>=0.13.0",
    "tqdm>=4.60.0",
]
keywords = [
    "astrophysics",
    "bayesian-inference",
    "bbh",
    "binary-black-holes",
    "binary-neutron-stars",
    "bns",
    "compact-binaries",
    "gravitational-waves",
    "jax",
    "neutron-star-black-hole",
    "nsbh",
    "population-inference",
]

[project.optional-dependencies]
cpu = ["jax>=0.7.0"]
cuda12 = ["jax[cuda12]>=0.7.0"]
cuda13 = ["jax[cuda13]>=0.7.0"]
tpu = ["jax[tpu]>=0.7.0"]
dev = ["prek>=0.2.30", "ruff>=0.8.0", "setuptools>=75.6.0"]
test = ["pytest>=8.3.0", "tfp-nightly", "astropy>=6.0.0"]
doc = [
    "astroid<5",
    "furo",
    "ipython!=8.7.0",
    "myst-nb",
    "setuptools_scm",
    "sphinx_design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx>=2.0",
    "sphinxcontrib-bibtex",
]

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"

[project.urls]
Changelog = "https://github.com/gwkokab/gwkokab/blob/main/CHANGELOG.md"
Discussion = "https://github.com/gwkokab/gwkokab/discussions"
Homepage = "https://github.com/gwkokab/gwkokab"
Issues = "https://github.com/gwkokab/gwkokab/issues"

[project.scripts]
# GWKokab plotting scripts
gwk_batch_scatter2d = "gwkokab_scripts.batch_scatter2d:main"
gwk_batch_scatter3d = "gwkokab_scripts.batch_scatter3d:main"
gwk_chain_plot = "gwkokab_scripts.chain_plot:main"
gwk_corner_overplot = "gwkokab_scripts.corner_overplot:main"
gwk_corner_plot = "gwkokab_scripts.corner_plot:main"
gwk_ess_evolution_plot = "gwkokab_scripts.ess_evolution_plot:main"
gwk_ess_plot = "gwkokab_scripts.ess_plot:main"
gwk_hist_overplot = "gwkokab_scripts.hist_overplot:main"
gwk_joint_plot = "gwkokab_scripts.joint_plot:main"
gwk_ppd_plot = "gwkokab_scripts.ppd_plot:main"
gwk_r_hat_plot = "gwkokab_scripts.r_hat_plot:main"
gwk_scatter2d = "gwkokab_scripts.scatter2d:main"
gwk_scatter3d = "gwkokab_scripts.scatter3d:main"
# Kokab scripts
## Genie scripts
synthetic_analytical_pe = "gwkanal.core.synthetic_pe:synthetic_analytical_pe_main"
synthetic_discrete_pe_ecc_matter = "gwkanal.ecc_matters.synthetic_pe:main"
synthetic_discrete_pe_n_pls_m_gs = "gwkanal.n_pls_m_gs.synthetic_pe:main"
synthetic_events_ecc_matter = "gwkanal.ecc_matters.synthetic_events:main"
synthetic_events_n_pls_m_gs = "gwkanal.n_pls_m_gs.synthetic_events:main"
## FSage scripts
f_sage_ecc_matters = "gwkanal.ecc_matters.sage:f_main"
f_sage_n_pls_m_gs = "gwkanal.n_pls_m_gs.sage:f_main"
f_sage_multisource = "gwkanal.multisource.sage:f_main"
f_sage_o4_n_bpls_m_gs = "gwkanal.o4_n_bpls_m_gs.sage:f_main"
f_sage_o3_n_pls_m_gs = "gwkanal.o3_n_pls_m_gs.sage:f_main"
## NSage scripts
n_sage_ecc_matters = "gwkanal.ecc_matters.sage:n_main"
n_sage_n_pls_m_gs = "gwkanal.n_pls_m_gs.sage:n_main"
n_sage_multisource = "gwkanal.multisource.sage:n_main"
n_sage_o4_n_bpls_m_gs = "gwkanal.o4_n_bpls_m_gs.sage:n_main"
n_sage_o3_n_pls_m_gs = "gwkanal.o3_n_pls_m_gs.sage:n_main"
## Monk scripts
f_monk_ecc_matters = "gwkanal.ecc_matters.monk:main"
f_monk_n_pls_m_gs = "gwkanal.n_pls_m_gs.monk:main"
f_monk_multisource = "gwkanal.multisource.monk:main"
f_monk_o3_n_pls_m_gs = "gwkanal.o3_n_pls_m_gs.monk:main"
f_monk_o4_n_bpls_m_gs = "gwkanal.o4_n_bpls_m_gs.monk:main"
# These scripts are for developer/user experience.
gwk_diag_mass_matrix = "gwkokab_scripts.diag_mass_matrix:main"
gwk_flowMC_info = "gwkokab_scripts.flowMC_info:main"
gwk_flowMC_cfg_template = "gwkokab_scripts.flowMC_cfg_template:main"
gwk_numpyro_cfg_template = "gwkokab_scripts.numpyro_cfg_template:main"

[tool.pytest.ini_options]
addopts = ["-v", "--color=yes"]
filterwarnings = [
    "error",
    "ignore:numpy.ufunc size changed,:RuntimeWarning",
    "ignore:Using a non-tuple sequence:FutureWarning",
    "ignore:jax.tree_structure is deprecated:FutureWarning",
    "ignore:numpy.linalg support is experimental:UserWarning",
    "ignore:scipy.linalg support is experimental:UserWarning",
    "once:No GPU:UserWarning",
    "once::DeprecationWarning",
]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.docformatter]
# The ``summaries`` are not (yet) 75 characters because the summary lines can't be
# automatically wrapped and must be re-written, which should be done at some point.
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
syntax = "numpy"
